<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="16dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstQuestionTitle" />

                <TextView
                    style="@style/QandA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstQuestion" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/text_answerFrance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerFrance" />

                    <RadioButton
                        android:id="@+id/text_correctAns1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correctAns1" />

                    <RadioButton
                        android:id="@+id/text_answerArgentina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerArg" />
                </RadioGroup>

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secondQuestionTitle" />

                <TextView
                    style="@style/QandA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secondQuestion" />

                <EditText
                    android:id="@+id/UserInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expensive"
                    android:inputType="text"
                    android:maxLines="5" />

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thirdQuestionTitle" />

                <TextView
                    style="@style/QandA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thirdQuestion" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_correctAns2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correctAns2"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_answerOwen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerOwen"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_correctAns3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correctAns3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_answerIbra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerIbra" />
                </LinearLayout>

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fourthQuestionTitle" />

                <TextView
                    style="@style/QandA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fourthQuestion" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/text_answer21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer21" />

                    <RadioButton
                        android:id="@+id/text_answer18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer18" />

                    <RadioButton
                        android:id="@+id/text_correctAns4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correctAns4" />
                </RadioGroup>

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifthQuestionTitle" />

                <TextView
                    style="@style/QandA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifthQuestion" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_answerPepe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerPepe" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_correctAns5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correctAns5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_correctAns6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correctAns6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/text_answerRonaldo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/QandA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerRonaldo" />
                </LinearLayout>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/submit" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>

